--- a/23T0_Lecture_Practice.ipynb
+++ b/23T0_Lecture_Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuhYhbAqOETRBPQJtJSqUn",
+      "authorship_tag": "ABX9TyN05ft70VzA81B9IkgFir9G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,11 +121,11 @@
         "    print(\"It is not a square.\")"
       ],
       "metadata": {
-        "id": "y19AKLF1DZte",
-        "outputId": "5908ff54-5471-47bd-ed59-50f11b98ae21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y19AKLF1DZte",
+        "outputId": "5908ff54-5471-47bd-ed59-50f11b98ae21"
       },
       "execution_count": 3,
       "outputs": [
@@ -173,14 +173,17 @@
         "    print(\"is the oldest\")\n",
         "if age3 > age1 and age3 > age2:\n",
         "    print(age3)\n",
-        "    print(\"is the oldest\")"
+        "    print(\"is the oldest\")\n",
+        "\n",
+        "# Determine the youngest\n",
+        "# Do this one yourself!! :)"
       ],
       "metadata": {
-        "id": "y51BU3OsEp-t",
-        "outputId": "1291ada3-a618-4190-ac39-3866198f2c7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y51BU3OsEp-t",
+        "outputId": "1291ada3-a618-4190-ac39-3866198f2c7e"
       },
       "execution_count": 9,
       "outputs": [
