--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSFO5OpQrF/A7JHbgjVfL2",
+      "authorship_tag": "ABX9TyPkgwlOy4DVHaL8eo0C4RjG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,6 +158,146 @@
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
             "\u001b[0;32m<ipython-input-1-cc973c3f1b21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#age = int(age) # if we don't convert age to an int, we can't subtract it on line 7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You can get a senior citizen card in \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m65\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"years\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'str'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Invalid Syntax on line 8 (the problem is: that I only used one equals sign, not 2.)\n",
+        "\n",
+        "# Get length and breadth from the user\n",
+        "length = input(\"Enter the length: \")\n",
+        "breadth = input(\"Enter the breadth: \")\n",
+        "\n",
+        "# Check if it's a square or not\n",
+        "if length = breadth:\n",
+        "    print(\"It is a square.\")\n",
+        "else:\n",
+        "    print(\"It is not a square.\")"
+      ],
+      "metadata": {
+        "id": "5iFJP2WlEQOh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# If you run this, and press Enter leaving a box blank, you cause a ValueError\n",
+        "\n",
+        "# Take the age of 3 people\n",
+        "age1 = input(\"Enter age 1: \")\n",
+        "age2 = input(\"Enter age 2: \")\n",
+        "age3 = input(\"Enter age 3: \")\n",
+        "\n",
+        "# Change ages to ints\n",
+        "age1 = int(age1)\n",
+        "age2 = int(age2)\n",
+        "age3 = int(age3)\n",
+        "\n",
+        "# Determine the oldest and youngest\n",
+        "# I'm older than you (one other person) and I'm older than you (the other other person), therefore, I am the oldest\n",
+        "if age1 > age2 and age1 > age3:\n",
+        "    print(age1)\n",
+        "    print(\"is the oldest\")\n",
+        "# Do this for the other two people\n",
+        "if age2 > age1 and age2 > age3:\n",
+        "    print(age2)\n",
+        "    print(\"is the oldest\")\n",
+        "if age3 > age1 and age3 > age2:\n",
+        "    print(age3)\n",
+        "    print(\"is the oldest\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 292
+        },
+        "id": "qNQIn91fGcsz",
+        "outputId": "4159ba84-de63-468a-bb97-c6d56f6aa099"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter age 1: 100\n",
+            "Enter age 2: 5\n",
+            "Enter age 3: \n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-69359be1fea8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mage1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mage1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mage2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mage2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mage3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mage3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Determine the oldest and youngest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "How could we stop the user from causing this problem? (Answer is on line 8 and 9.)"
+      ],
+      "metadata": {
+        "id": "aeNMR8cmGsA6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# If you run this, and press Enter leaving a box blank, you cause a ValueError\n",
+        "\n",
+        "# Take the age of 3 people\n",
+        "age1 = input(\"Enter age 1: \")\n",
+        "age2 = input(\"Enter age 2: \")\n",
+        "age3 = input(\"Enter age 3: \")\n",
+        "\n",
+        "# Check each age can be converted to an int, before continuing.\n",
+        "if age1.isnumeric() and age2.isnumeric() and age3.isnumeric():\n",
+        "    # Change ages to ints\n",
+        "    age1 = int(age1)\n",
+        "    age2 = int(age2)\n",
+        "    age3 = int(age3)\n",
+        "\n",
+        "    # Determine the oldest and youngest\n",
+        "    # I'm older than you (one other person) and I'm older than you (the other other person), therefore, I am the oldest\n",
+        "    if age1 > age2 and age1 > age3:\n",
+        "        print(age1)\n",
+        "        print(\"is the oldest\")\n",
+        "    # Do this for the other two people\n",
+        "    if age2 > age1 and age2 > age3:\n",
+        "        print(age2)\n",
+        "        print(\"is the oldest\")\n",
+        "    if age3 > age1 and age3 > age2:\n",
+        "        print(age3)\n",
+        "        print(\"is the oldest\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D_CUHnODGu9b",
+        "outputId": "c52f2ba2-3c2b-4779-facb-d8e78ae9e4ea"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter age 1: 100\n",
+            "Enter age 2: 5\n",
+            "Enter age 3: \n"
           ]
         }
       ]
