--- a/lectures/23T0_PPF_Lecture_2.ipynb
+++ b/lectures/23T0_PPF_Lecture_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOViFOjcVu3bXRXfAmR+aaf",
+      "authorship_tag": "ABX9TyMbnu95KOq6PBhNmHM7+/Md",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,90 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Lists"
+      ],
+      "metadata": {
+        "id": "s_uD4uSjKMsd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a list\n",
+        "\n",
+        "users = []\n",
+        "\n",
+        "# Add a user\n",
+        "\n",
+        "users.append(\"Sim\")\n",
+        "\n",
+        "# Display a list\n",
+        "\n",
+        "print(users)\n",
+        "\n",
+        "# Add another user\n",
+        "\n",
+        "users.append(\"Brendan\")\n",
+        "\n",
+        "print(users)\n",
+        "\n",
+        "# Find out if a specific user is in the list\n",
+        "\n",
+        "if \"Brendan\" in users:\n",
+        "    print(\"Brendan is in users.\")\n",
+        "\n",
+        "user = input(\"Enter a user to check list for: \")\n",
+        "if user in users:\n",
+        "    print(user)\n",
+        "    print(\"is in users\")\n",
+        "else:\n",
+        "    print(user)\n",
+        "    print(\"is not in users\")"
+      ],
+      "metadata": {
+        "id": "Q5klLBqpJJF7",
+        "outputId": "3669846e-8db0-40da-c3e5-1e6b1fb2412a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Sim']\n",
+            "['Sim', 'Brendan']\n",
+            "Brendan is in users.\n",
+            "Enter a user to check list for: Sim\n",
+            "Sim\n",
+            "is in users\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Full list of methods which can be run on a list: https://www.w3schools.com/python/python_lists_methods.asp"
+      ],
+      "metadata": {
+        "id": "mrj3c1hhLVMi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "How do we user inputs username and then adds it to the list?"
+      ],
+      "metadata": {
+        "id": "IRESbmBeLjnV"
+      }
     }
   ]
 }
