--- a/lectures/23T0_PPF_Lecture_2.ipynb
+++ b/lectures/23T0_PPF_Lecture_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkrzafCfTa+OyfdBIh2gHp",
+      "authorship_tag": "ABX9TyOgbreImL/OPqQKEqhjW6BT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Control Flow Part 2\n",
+        "## Introduction to Lists\n",
         "\n",
-        "If they are a user that has logged on before -> welcome back\n",
+        "Continuing the example: If they are a user that has logged on before -> welcome back\n",
         "\n"
       ],
       "metadata": {
@@ -122,7 +122,7 @@
         "id": "Q5klLBqpJJF7",
         "outputId": "3669846e-8db0-40da-c3e5-1e6b1fb2412a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         "id": "5g-vIclyQDRE",
         "outputId": "745ada3a-87b8-43a1-8191-36a331fc0248"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +243,7 @@
         "id": "JkyoCCwRQWHj",
         "outputId": "0595c49b-8d52-4824-9d9b-d6c5a415b91b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Control Flow Part 2 continued"
+        "## Putting our users into a list"
       ],
       "metadata": {
         "id": "uFjeD-SkSY3V"
@@ -300,7 +300,7 @@
         "id": "BY-XCcgySXcX",
         "outputId": "8cbdb82b-6ca8-4a04-eb01-b590ff9dae7d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,10 +321,134 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Lists and Loops Example: Crochet"
+      ],
+      "metadata": {
+        "id": "0dxPNjLF4TwY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Crochet example (same as recipe, book page, season and episode of a show... discuss variations)\n",
+        "\n",
+        "* Consider, single line pattern\n",
+        "1sc 2dc 17t\n",
+        "\n",
+        "* Write a program, which takes in all the steps of a pattern, displays the pattern neatly, asks the user to enter which step they're up to, shows an updated display of only the next steps they should do. Until tehy have finished the pattern.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "O2N9sIX3z7IM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "steps = []\n",
+        "steps.append(\"\") # This is so that step 1 (the first step the user inputs) is at index 1.\n",
+        "next_step = input(\"Enter the next step (or . to finish): \")\n",
+        "\n",
+        "# While next_step is not equal to a ., keep appending and getting new steps\n",
+        "while next_step != '.':\n",
+        "    steps.append(next_step)\n",
+        "    next_step = input(\"Enter the next step (or . to finish): \")\n",
+        "\n",
+        "# Print out the list of steps neatly\n",
+        "i = 1\n",
+        "num_steps = len(steps)\n",
+        "while i < num_steps:\n",
+        "    print(f\"{i}: {steps[i]}\")\n",
+        "    i = i + 1\n",
+        "\n",
+        "# Find out which step they're up to and display it\n",
+        "upto = input(\"Where are you up to? \")\n",
+        "upto = int(upto)\n",
+        "print(steps[upto])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SOQ3RsKh7FY8",
+        "outputId": "ba031f74-2576-465d-ce14-e83cd8c179c9"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the next step (or . to finish): 1sc\n",
+            "Enter the next step (or . to finish): 14ht\n",
+            "Enter the next step (or . to finish): 4dc\n",
+            "Enter the next step (or . to finish): 8c\n",
+            "Enter the next step (or . to finish): 5hdt\n",
+            "Enter the next step (or . to finish): .\n",
+            "1: 1sc\n",
+            "2: 14ht\n",
+            "3: 4dc\n",
+            "4: 8c\n",
+            "5: 5hdt\n",
+            "Where are you up to? 5\n",
+            "5hdt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Things we learnt:\n",
+        "* Lists start numbering at 0.\n",
+        "* The item number in a list, is referred to as the **index**.\n",
+        "* An item in a list is referred to as an **element**."
+      ],
+      "metadata": {
+        "id": "ani4BkHO84Jv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Improvements to make\n",
+        "* Things to consider: \n",
+        "    * how to print more neatly \n",
+        "    * if the user enters the whole pattern in one line, with each step separated by spaces\n",
+        "    * multiple lines in the pattern"
+      ],
+      "metadata": {
+        "id": "GYqVx2Z27ElH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "now you can do games :)"
+      ],
+      "metadata": {
+        "id": "Do_EizF57SHv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Single quotes and double quotes around strings."
       ],
       "metadata": {
         "id": "d4poVFiaR0HG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Printing more and more easily"
+      ],
+      "metadata": {
+        "id": "oMGJONFQxjMy"
       }
     },
     {
