--- a/lectures/23T0_PPF_Lecture_2.ipynb
+++ b/lectures/23T0_PPF_Lecture_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgbreImL/OPqQKEqhjW6BT",
+      "authorship_tag": "ABX9TyPv/pBEIZEI9330Y6Wlqv5z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,34 +367,58 @@
         "# Find out which step they're up to and display it\n",
         "upto = input(\"Where are you up to? \")\n",
         "upto = int(upto)\n",
-        "print(steps[upto])\n"
+        "\n",
+        "while upto < num_steps:\n",
+        "    # Print out the rest of the pattern\n",
+        "    i = upto\n",
+        "    num_steps = len(steps)\n",
+        "    while i < num_steps:\n",
+        "        print(f\"{i}: {steps[i]}\")\n",
+        "        i = i + 1\n",
+        "    \n",
+        "    # Find out where they're up to again\n",
+        "    upto = input(\"Where are you up to? \")\n",
+        "    upto = int(upto)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SOQ3RsKh7FY8",
-        "outputId": "ba031f74-2576-465d-ce14-e83cd8c179c9"
+        "outputId": "1a87dfb4-e23f-4d07-e204-6bcb673cbe6e"
       },
-      "execution_count": 17,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Enter the next step (or . to finish): 1sc\n",
-            "Enter the next step (or . to finish): 14ht\n",
+            "Enter the next step (or . to finish): 2dc\n",
+            "Enter the next step (or . to finish): 15sc\n",
+            "Enter the next step (or . to finish): 2dc\n",
+            "Enter the next step (or . to finish): 5sc\n",
             "Enter the next step (or . to finish): 4dc\n",
-            "Enter the next step (or . to finish): 8c\n",
-            "Enter the next step (or . to finish): 5hdt\n",
             "Enter the next step (or . to finish): .\n",
             "1: 1sc\n",
-            "2: 14ht\n",
-            "3: 4dc\n",
-            "4: 8c\n",
-            "5: 5hdt\n",
+            "2: 2dc\n",
+            "3: 15sc\n",
+            "4: 2dc\n",
+            "5: 5sc\n",
+            "6: 4dc\n",
+            "Where are you up to? 2\n",
+            "2: 2dc\n",
+            "3: 15sc\n",
+            "4: 2dc\n",
+            "5: 5sc\n",
+            "6: 4dc\n",
             "Where are you up to? 5\n",
-            "5hdt\n"
+            "5: 5sc\n",
+            "6: 4dc\n",
+            "Where are you up to? 6\n",
+            "6: 4dc\n",
+            "Where are you up to? 7\n"
           ]
         }
       ]
@@ -414,10 +438,71 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Now you can make games :) See Zork etc. (https://www.makeuseof.com/tag/browser-text-based-games/)"
+      ],
+      "metadata": {
+        "id": "DEu1O9gpK7_J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# What if they want to enter the whole pattern on one line? (Lines 4-9 changed to handle this case.)\n",
+        "\n",
+        "\n",
+        "steps = input(\"Enter the pattern: \")\n",
+        "\n",
+        "# Approach 1 to insert the blank before the steps: steps = [\"\"] + steps.split()\n",
+        "# Approach 2:\n",
+        "steps = steps.split()\n",
+        "steps.insert(0, \"\")\n",
+        "\n",
+        "# Print out the list of steps neatly\n",
+        "i = 1\n",
+        "num_steps = len(steps)\n",
+        "while i < num_steps:\n",
+        "    print(f\"{i}: {steps[i]}\")\n",
+        "    i = i + 1\n",
+        "\n",
+        "# Find out which step they're up to and display it\n",
+        "upto = input(\"Where are you up to? \")\n",
+        "upto = int(upto)\n",
+        "print(steps[upto])\n"
+      ],
+      "metadata": {
+        "id": "PwEswtDxLJVg",
+        "outputId": "51c361b7-a404-4ce3-928c-734d44beddcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the pattern: 1sc 5ht\n",
+            "1: 1sc\n",
+            "2: 5ht\n",
+            "Where are you up to? 2\n",
+            "5ht\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "KhqPL8yFLI4J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Improvements to make\n",
         "* Things to consider: \n",
-        "    * how to print more neatly \n",
-        "    * if the user enters the whole pattern in one line, with each step separated by spaces\n",
         "    * multiple lines in the pattern"
       ],
       "metadata": {
@@ -427,11 +512,89 @@
     {
       "cell_type": "markdown",
       "source": [
-        "now you can do games :)"
+        "task for you: write the code below using while loops istead of for loops"
       ],
       "metadata": {
-        "id": "Do_EizF57SHv"
+        "id": "TIuA2FW6Pwcm"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Enter the pattern with spaces between steps, and commas between lines.\")\n",
+        "pattern = input(\"Enter the pattern: \")\n",
+        "\n",
+        "print(pattern)\n",
+        "lines_of_pattern = pattern.split(',')\n",
+        "\n",
+        "print(lines_of_pattern)\n",
+        "\n",
+        "#steps_of_pattern = []\n",
+        "print(\"Each line of the pattern, broken into steps:\")\n",
+        "for line in lines_of_pattern:\n",
+        "    steps_of_line = line.split()\n",
+        "    print(steps_of_line)"
+      ],
+      "metadata": {
+        "id": "pbSM8lZXLG-a",
+        "outputId": "89b89034-28c6-41ba-f5e2-c5cbadc3daf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the pattern with spaces between steps, and commas between lines.\n",
+            "Enter the pattern: 1sc 2dc 3sc,5dc 5sc\n",
+            "1sc 2dc 3sc,5dc 5sc\n",
+            "['1sc 2dc 3sc', '5dc 5sc']\n",
+            "Each line of the pattern, broken into steps:\n",
+            "['1sc', '2dc', '3sc']\n",
+            "['5dc', '5sc']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "steps = [\"\"] + steps.split()\n",
+        "\n",
+        "# Print out the list of steps neatly\n",
+        "i = 1\n",
+        "num_steps = len(steps)\n",
+        "while i < num_steps:\n",
+        "    print(f\"{i}: {steps[i]}\")\n",
+        "    i = i + 1\n",
+        "\n",
+        "# Find out which step they're up to and display it\n",
+        "upto = input(\"Where are you up to? \")\n",
+        "upto = int(upto)\n",
+        "\n",
+        "while upto < num_steps:\n",
+        "    # Print out the rest of the pattern\n",
+        "    i = upto\n",
+        "    num_steps = len(steps)\n",
+        "    while i < num_steps:\n",
+        "        print(f\"{i}: {steps[i]}\")\n",
+        "        i = i + 1\n",
+        "    \n",
+        "    # Find out where they're up to again\n",
+        "    upto = input(\"Where are you up to? \")\n",
+        "    upto = int(upto)\n",
+        "\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "I_Tu9OasPlUo"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
