--- a/lectures/23T0_PPF_Lecture_2.ipynb
+++ b/lectures/23T0_PPF_Lecture_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv/pBEIZEI9330Y6Wlqv5z",
+      "authorship_tag": "ABX9TyO1sLtVGaW4+25vu3XiSXAp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -470,11 +470,11 @@
         "print(steps[upto])\n"
       ],
       "metadata": {
-        "id": "PwEswtDxLJVg",
-        "outputId": "51c361b7-a404-4ce3-928c-734d44beddcb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PwEswtDxLJVg",
+        "outputId": "51c361b7-a404-4ce3-928c-734d44beddcb"
       },
       "execution_count": 22,
       "outputs": [
@@ -529,20 +529,20 @@
         "\n",
         "print(lines_of_pattern)\n",
         "\n",
-        "#steps_of_pattern = []\n",
-        "print(\"Each line of the pattern, broken into steps:\")\n",
+        "steps = []\n",
         "for line in lines_of_pattern:\n",
         "    steps_of_line = line.split()\n",
-        "    print(steps_of_line)"
+        "    steps.append(steps_of_line)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "pbSM8lZXLG-a",
-        "outputId": "89b89034-28c6-41ba-f5e2-c5cbadc3daf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pbSM8lZXLG-a",
+        "outputId": "10f8762c-3886-409e-ba18-68a6fa70f601"
       },
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,11 +551,90 @@
             "Enter the pattern with spaces between steps, and commas between lines.\n",
             "Enter the pattern: 1sc 2dc 3sc,5dc 5sc\n",
             "1sc 2dc 3sc,5dc 5sc\n",
-            "['1sc 2dc 3sc', '5dc 5sc']\n",
-            "Each line of the pattern, broken into steps:\n",
-            "['1sc', '2dc', '3sc']\n",
-            "['5dc', '5sc']\n"
+            "['1sc 2dc 3sc', '5dc 5sc']\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "steps[0]"
+      ],
+      "metadata": {
+        "id": "iJp0eua-SwXT",
+        "outputId": "38833355-3bda-4eca-c4b2-6406b9564742",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['1sc', '2dc', '3sc']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "steps[1]"
+      ],
+      "metadata": {
+        "id": "3w-jhnlsS24s",
+        "outputId": "2f8e22ac-a481-486f-c796-847b301ee348",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['5dc', '5sc']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "steps[0][0]"
+      ],
+      "metadata": {
+        "id": "vMuYi5tsS4cI",
+        "outputId": "b89ca5bd-2686-43e9-be79-451e5241c7da",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1sc'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
         }
       ]
     },
