--- a/23T0_Lab_1b.ipynb
+++ b/23T0_Lab_1b.ipynb
@@ -37,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Week 1b Total Marks: (currently 5, but will likely be changed in the near future)"
+        "# Lab Week 1b Total Marks: 5"
       ],
       "metadata": {
         "id": "D5iWzPsK550W"
@@ -65,24 +65,6 @@
       "metadata": {
         "id": "x31-PYOoqL8X"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "first = input(\"What is your first number? \")\n",
-        "seconb = input(\"What is your second number? \")\n",
-        "third = input(\"What is your third number? \")\n",
-        "\n",
-        "print(\"the sum of the first two numbers is: \", first + second)\n",
-        "int(third) + 100\n",
-        "print(\"the third number + 100 is\", third)\n",
-        "print(\"the third input is a \", type(third))"
-      ],
-      "metadata": {
-        "id": "Lgr-Jelgq3Ck"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
