--- a/23T0_Lab_1b.ipynb
+++ b/23T0_Lab_1b.ipynb
@@ -67,6 +67,24 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "first = input(\"What is your first number? \")\n",
+        "seconb = input(\"What is your second number? \")\n",
+        "third = input(\"What is your third number? \")\n",
+        "\n",
+        "print(\"the sum of the first two numbers is: \", first + second)\n",
+        "int(third) + 100\n",
+        "print(\"the third number + 100 is\", third)\n",
+        "print(\"the third input is a \", type(third))"
+      ],
+      "metadata": {
+        "id": "U_pxRJQYb8VM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "GGPcdTyaEbeq"
