--- a/23T0_Lab_1b.ipynb
+++ b/23T0_Lab_1b.ipynb
@@ -628,13 +628,15 @@
       "source": [
         "### Card game\n",
         "\n",
-        "(1 mark) Consider a game where Aces are worth 5 points, Kings 3 points, Queens 2 points, Jacks 1 point, and all other cards are not worth any points \n",
+        "(1 mark) Consider a game where Aces are worth 5 points, Kings 3 points, Queens 2 points, Jacks 1 point, and all other cards are not worth any points.\n",
         "\n",
         "(one = 0 points, two = 0 points etc.). \n",
         "\n",
         "Write a program, that first takes in 5 card inputs, inserts them into one list and prints the list. Then adds up the number of points and displays that.\n",
         "\n",
-        "Assume that all inputed cards are valid and lower case and non-plural\n",
+        "Assume that all inputed cards are valid and lower case and non-plural.\n",
+        "\n",
+        "Any text in asteriks means it's something entered by the user. Eg \\*ace\\* means the user typed in the word ace.\n",
         "\n",
         "Example Output:\n",
         "\n",
